--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,10 +114,10 @@ env = HYPRSHOT_DIR,~/media/screenshots
 
 # Screenshot a window
 # With swappy (Captures to clipboard, then pipes clipboard content to swappy)
-bind = CTRL, PRINT, exec, hyprshot --freeze -m window --raw --clipboard-only | swappy -f -
+bind = CTRL ALT, PRINT, exec, hyprshot --freeze -m window --raw --clipboard-only | swappy -f -
 
 # Without swappy (Captures window directly to clipboard)
-bind = , PRINT, exec, hyprshot --freeze -m window --clipboard-only
+bind = ALT, PRINT, exec, hyprshot --freeze -m window --clipboard-only
 
 # Screenshot a monitor
 # With swappy (Captures to clipboard, then pipes clipboard content to swappy)
