--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,6 @@ monitor = DP-5, 2560x1440@59, -2560x0, 1
 ###################
 
 $terminal = ghostty
-$rofi = rofi -show run
 
 #################
 ### AUTOSTART ###
@@ -19,9 +18,21 @@ $rofi = rofi -show run
 exec-once=waybar # Toolbar
 exec-once=nm-applet # Network 
 exec-once=fcitx5 # IME
+exec-once=systemctl --user start hyprpolkitagent # Authentication deamon for GUI apps
 
 # STARTUP PROGRAMS
 exec-once=$terminal
+exec-once=bitwarden-desktop
+
+#############
+### THEME ###
+#############
+env = GTK_THEME,Adw:dark      # Sets the GTK 3 theme name and signals dark
+env = GTK_THEME,Adwaita:dark  # For GTK 4 (often automatically picks dark if signaled)
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Them
+
+env = XDG_CURRENT_DESKTOP,Unity # Common workaround
+env = XDG_DATA_DIRS,/usr/share:/usr/local/share # Essential for finding system themes/icons
 
 ################
 ### KEYBINDS ###
@@ -29,13 +40,14 @@ exec-once=$terminal
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, exec, hyprctl reload
 
 # APPS QUICK ACCESS
 bind = $mainMod, T, exec, $terminali
 
 # APP MANAGEMENT
 # Rofi
-bind = $mainMod, SPACE, exec, $rofi
+bind = $mainMod, SPACE, exec, rofi -show combi -combi-modes "window,drun" -modes combi
 
 # WINDOW MANAGEMENT
 # Move focus with mainMod + h,j,k,l
