--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ exec-once=waybar # Toolbar
 exec-once=nm-applet # Network 
 exec-once=fcitx5 # IME
 exec-once=systemctl --user start hyprpolkitagent # Authentication deamon for GUI apps
+exec-once=hyprpaper # Wallpapers
 
 # STARTUP PROGRAMS
 exec-once=$terminal
@@ -47,7 +48,8 @@ bind = $mainMod, T, exec, $terminali
 
 # APP MANAGEMENT
 # Rofi
-bind = $mainMod, SPACE, exec, rofi -show combi -combi-modes "window,drun" -modes combi
+bind = $mainMod, SPACE, exec, rofi -modi "combi,Scripts:~/.config/rofi/scripts/rofi-script-launcher.sh" -show combi -combi-modes "window,drun,Scripts"
+
 
 # WINDOW MANAGEMENT
 # Move focus with mainMod + h,j,k,l
