--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -19,7 +19,7 @@
 # ==========================
 # # The config file consists of simple key-value pairs,
 # # separated by equals signs.
-# font-family = Iosevka
+font-family = "JetBrainsMono Nerd Font"
 # window-padding-x = 2
 #
 # # Spacing around the equals sign does not matter.
@@ -41,3 +41,6 @@
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
+background = #000000
+background-opacity = 0.5
+
