--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,8 +2,34 @@
 ### MONITORS ###
 ################
 
-monitor = DP-4, 2560x1440@59, 0x0, 1
-monitor = DP-5, 2560x1440@59, -2560x0, 1
+$monitor1 = DP-4
+$monitor2 = DP-5
+
+monitor = $monitor1, 2560x1440@59, 0x0, 1
+monitor = $monitor2, 2560x1440@59, -2560x0, 1
+
+# Workspaces
+workspace = 1, monitor:$monitor1, default:true
+workspace = 2, monitor:$monitor1
+workspace = 3, monitor:$monitor1
+workspace = 4, monitor:$monitor1
+workspace = 5, monitor:$monitor1
+workspace = 6, monitor:$monitor1
+workspace = 7, monitor:$monitor1
+workspace = 8, monitor:$monitor1
+workspace = 9, monitor:$monitor1
+workspace = 10, monitor:$monitor1
+
+workspace = 11, monitor:$monitor2, default:true
+workspace = 12, monitor:$monitor2
+workspace = 13, monitor:$monitor2
+workspace = 14, monitor:$monitor2
+workspace = 15, monitor:$monitor2
+workspace = 16, monitor:$monitor2
+workspace = 17, monitor:$monitor2
+workspace = 18, monitor:$monitor2
+workspace = 19, monitor:$monitor2
+workspace = 20, monitor:$monitor2
 
 ###################
 ### MY PROGRAMS ###
@@ -20,6 +46,7 @@ exec-once=nm-applet # Network
 exec-once=fcitx5 # IME
 exec-once=systemctl --user start hyprpolkitagent # Authentication deamon for GUI apps
 exec-once=hyprpaper # Wallpapers
+exec-once=hypridle # Idle detection
 
 # STARTUP PROGRAMS
 exec-once=$terminal
@@ -35,6 +62,43 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Them
 env = XDG_CURRENT_DESKTOP,Unity # Common workaround
 env = XDG_DATA_DIRS,/usr/share:/usr/local/share # Essential for finding system themes/icons
 
+#####################
+### LOOK AND FEEL ###
+#####################
+
+general {
+    border_size = 2
+    allow_tearing = false
+    gaps_in = 5
+    gaps_out = 10
+    resize_on_border = true
+    col.active_border = rgba(0d47a1ee) rgba(1976d2ee) 45deg
+}
+
+decoration {
+    rounding = 10
+    rounding_power = 2
+
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
+
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+
+        vibrancy = 0.1696
+    }
+}
+
+
 ################
 ### KEYBINDS ###
 ################
@@ -44,12 +108,11 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exec, hyprctl reload
 
 # APPS QUICK ACCESS
-bind = $mainMod, T, exec, $terminali
+bind = $mainMod, T, exec, $terminal
 
 # APP MANAGEMENT
 # Rofi
-bind = $mainMod, SPACE, exec, rofi -modi "combi,Scripts:~/.config/rofi/scripts/rofi-script-launcher.sh" -show combi -combi-modes "window,drun,Scripts"
-
+bind = $mainMod, SPACE, exec, rofi -show combi -combi-modes "window,drun" -modes combi
 
 # WINDOW MANAGEMENT
 # Move focus with mainMod + h,j,k,l
@@ -80,8 +143,11 @@ bind = $mainMod ALT, L, resizeactive, 50 0
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod SHIFT, mouse:272, resizewindow
 
+# Toggle scale
+bind = $mainMod SHIFT, O, exec, ~/bin/scale-monitor-toggle.sh
+
 # WORKSPACE MANAGEMENT
-# Switch workspaces with mainMod + 1-9
+# Workspaces on monitor1
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -91,8 +157,9 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
-# Move windows to workspaces with mainMod + Shift + 1-9
+# Move windows to workspaces on monitor1
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -102,6 +169,31 @@ bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Workspaces on monitor2
+bind = $mainMod ALT, 1, workspace, 11
+bind = $mainMod ALT, 2, workspace, 12
+bind = $mainMod ALT, 3, workspace, 13
+bind = $mainMod ALT, 4, workspace, 14
+bind = $mainMod ALT, 5, workspace, 15
+bind = $mainMod ALT, 6, workspace, 16
+bind = $mainMod ALT, 7, workspace, 17
+bind = $mainMod ALT, 8, workspace, 18
+bind = $mainMod ALT, 9, workspace, 19
+bind = $mainMod ALT, 0, workspace, 20
+
+# Move windows to workspaces on monitor2
+bind = $mainMod ALT SHIFT, 1, movetoworkspace, 11
+bind = $mainMod ALT SHIFT, 2, movetoworkspace, 12
+bind = $mainMod ALT SHIFT, 3, movetoworkspace, 13
+bind = $mainMod ALT SHIFT, 4, movetoworkspace, 14
+bind = $mainMod ALT SHIFT, 5, movetoworkspace, 15
+bind = $mainMod ALT SHIFT, 6, movetoworkspace, 16
+bind = $mainMod ALT SHIFT, 7, movetoworkspace, 17
+bind = $mainMod ALT SHIFT, 8, movetoworkspace, 18
+bind = $mainMod ALT SHIFT, 9, movetoworkspace, 19
+bind = $mainMod ALT SHIFT, 0, movetoworkspace, 20
 
 # MULTIMEDIA MANAGEMENT
 # Multimedia keys for volume
